# actix-raft-cluster

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start_follower.cmd  start_leader.cmd
.github/workflows/: rust.yml
actor-registry/: Cargo.toml
actor-registry/src/: actor_node.rs  cluster_nodes_config.rs  error.rs  lib.rs  nodes_registry.rs  registry.rs
cluster-config/: Cargo.toml  config.json
cluster-config/src/: cluster_nodes_config.rs  lib.rs  node_item.rs
cluster-config/tests/: cluster_nodes_config_tests.rs
cluster-node/: Cargo.toml
cluster-node-app/: Cargo.toml
cluster-node-app/src/: main.rs
cluster-node-app/src/config/: cluster_config.rs  mod.rs  node_arg_config.rs
cluster-node-app/src/tracing/: mod.rs
cluster-node/src/: lib.rs
cluster-node/src/config/: error.rs  mod.rs  node_config.rs  remote_node.rs
cluster-node/src/node/: attach_to_leader.rs  cluster_node.rs  error.rs  mod.rs  registry_collection.rs
cluster-node/src/storage/: mod.rs  node_state_storage.rs
cluster-node/src/web_server/: error.rs  mod.rs  server.rs  server_config.rs
cluster-node/tests/: integrational_tests.rs
cluster-node/tests/common/: mod.rs  test_node.rs  test_tool.rs  tracing.rs
hello-actor/: Cargo.toml
hello-actor/src/: file_state_persistence.rs  handler.rs  inmemory_state_persistence.rs  main.rs  second_remote_actor.rs  test_remote_actor.rs
hello-actor/src/housekeeping/: housekeeping_actor.rs  mod.rs
hello-actor/src/persistence/: error.rs  json_state_serializer.rs  mod.rs  persistent_state.rs  state_persistence.rs  state_serializer.rs  virtual_actor_state.rs  virtual_actor_with_state.rs
hello-actor/src/virtual_actor/: error.rs  factory.rs  mod.rs  stoppable_actor.rs  virtual_actor.rs  virtual_addr.rs  virtual_message.rs
hello-actor/src/virtual_registry/: actor.rs  error.rs  mod.rs
http-json-transport/: Cargo.toml
http-json-transport/src/: lib.rs
http-json-transport/src/client/: error.rs  mod.rs
http-json-transport/src/config/: mod.rs
http-json-transport/src/server/: mod.rs  server.rs
http-json-transport/tests/: integrational_tests.rs
http-json-transport/tests/common/: mod.rs  tracing.rs
node-actor/: Cargo.toml
node-actor-server/: Cargo.toml
node-actor-server/src/: lib.rs  web_config.rs
node-actor/src/: actor.rs  attach_node.rs  error.rs  init.rs  lib.rs  metrics.rs  ping.rs
remote-actor/: Cargo.toml
remote-actor-derive/: Cargo.toml
remote-actor-derive/src/: lib.rs  remote_message_derive.rs
remote-actor-server/: Cargo.toml
remote-actor-server/src/: lib.rs  web_config.rs
remote-actor/src/: actor_addr.rs  actor_id.rs  actor_path_builder.rs  error.rs  lib.rs  remote_actor_addr.rs  remote_actor_trait.rs  remote_message.rs
va_tracing/: Cargo.toml
va_tracing/src/: config.rs  error.rs  lib.rs  setup.rs
