[package]
name = "actor-registry"
version = "0.1.0"
authors = ["Ivan <ikruchkov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-futures = "0.2.4"

actix = "0.11"
tokio = { version = "1.4.0" }
serde = { version = "1.0" }

thiserror = "1.0.24"

hash-rings = "1.1.0"

evmap = "10.0.2"

remote-actor = { path = "../remote-actor" }
