[package]
name = "cluster-config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
evmap = "10.0.2"
tokio = { version = "1.4.0" }

remote-actor = { path = "../remote-actor" }

[dev-dependencies]
tokio-test = "0.4.2"