[package]
name = "cluster-node"
version = "0.1.0"
authors = ["Ivan <ikruchkov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.17", features = ["json", "chrono"] }

thiserror = "1.0.24"

tokio = { version = "1.4.0", features = ["macros", "rt"] }
async-trait = "0.1.48"

actix = "0.11"
actix-rt = "2.2.0"
actix-web = { version = "4.0.0-beta.5", features = ["rustls"] }
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

node-actor = { path = "../node-actor" }
node-actor-server = { path = "../node-actor-server" }
actor-registry = { path = "../actor-registry" }
remote-actor = { path = "../remote-actor" }
remote-actor-server = { path = "../remote-actor-server" }
cluster-config = { path = "../cluster-config" }

[dev-dependencies]
clippy = { version = "0.0.*" }

#[dependencies.rocksdb]
#version = "0.15.0"
#default-features = false
#features = ["lz4"]
