[package]
name = "hello-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tracing-actix-web = "0.6"
tracing = "0.1"
actix = "0.13.0"

thiserror = "1.0.37"
anyhow = "1.0.66"

serde = { version = "1.0.147", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.87"

async-trait = "0.1.58"

parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
tokio = { version = "1.21.2", features = ["fs"] }