[package]
name = "http-json-transport"
version = "0.1.0"
authors = ["pengwin <ikruchkov0@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }

tracing-futures = "0.2.4"

thiserror = "1.0.24"

tokio = { version = "1.4.0", features = ["macros", "rt"] }
async-trait = "0.1.48"

actix = "0.12"
actix-rt = "2.4.0"
actix-web = { version = "4.0.0-beta.10", features = ["rustls"] }
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

url = "2.2.2"

 [dev-dependencies]
pretty_assertions = "1.0.0"
tracing-subscriber = { version = "0.2.17", features = ["json", "chrono"] }