[package]
name = "node-actor"
version = "0.1.0"
authors = ["Ivan <ikruchkov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-futures = "0.2.4"

actix = "0.11"
tokio = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64" 

async-trait = "0.1.48"

thiserror = "1.0.24"
anyhow = "1.0.40"

remote-actor = { path = "../remote-actor" }
actor-registry = { path = "../actor-registry" }
