[package]
name = "remote-actor-server"
version = "0.1.0"
authors = ["Ivan <ikruchkov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-futures = "0.2.4"

actix = "0.11"
actix-web = { version = "4.0.0-beta.5" }
serde = { version = "1.0" }
serde_json = "1.0.64"

remote-actor = { path = "../remote-actor" }
actor-registry = { path = "../actor-registry" }