[package]
name = "remote-actor"
version = "0.1.0"
authors = ["Ivan <ikruchkov0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tracing = "0.1"
tracing-futures = "0.2.4"
anyhow = "1.0.40"
thiserror = "1.0.24"
tokio = "1.4.0"

actix = "0.11"
serde = { version = "1.0" }

async-trait = "0.1.48"

reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls"] }

remote-actor-derive = { path = "../remote-actor-derive" }
