[package]
name = "va_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"

time = { version = "0.3.17", features = ["macros"] }

tracing = { version = "0.1.37" }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", features = ["json", "time", "tracing-log"] }

tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.17.0"
